--- a/Angular/angular-basico/src/app/componente02/componente02.html
+++ b/Angular/angular-basico/src/app/componente02/componente02.html
@@ -1,3 +1,3 @@
 <p>-------------------</p>
-<h1>Componente 02</h1>
+<h1>Componente 02 (Event Binding)</h1>
 <button (click)="mensagem()">Clique aqui!</button>
