feat: add ngfor

--- a/Angular/angular-basico/src/app/componente04/componente04.html
+++ b/Angular/angular-basico/src/app/componente04/componente04.html
@@ -6,3 +6,7 @@
 <br>
 <div class="quadrado" *ngIf="exibir"></div>
 
+<ul>
+  <li *ngFor="let n of nomes; index as indice">{{n}} - {{indice}}</li>
+</ul>
+
