feat: add ngStyle and ngClass

--- a/Angular/angular-basico/src/app/app.html
+++ b/Angular/angular-basico/src/app/app.html
@@ -2,3 +2,4 @@
 <app-componente02></app-componente02>
 <app-componente03></app-componente03>
 <app-componente04></app-componente04>
+<app-componente05></app-componente05>
