--- a/Angular/angular-basico/src/app/app.html
+++ b/Angular/angular-basico/src/app/app.html
@@ -3,3 +3,4 @@
 <app-componente03></app-componente03>
 <app-componente04></app-componente04>
 <app-componente05></app-componente05>
+<app-componente06></app-componente06>
