--- a/Angular/angular-basico/src/app/app.html
+++ b/Angular/angular-basico/src/app/app.html
@@ -4,3 +4,4 @@
 <app-componente04></app-componente04>
 <app-componente05></app-componente05>
 <app-componente06></app-componente06>
+<app-componente07></app-componente07>
