--- a/Angular/angular-basico/src/app/componente08/componente08.html
+++ b/Angular/angular-basico/src/app/componente08/componente08.html
@@ -1,5 +1,56 @@
 <p>-------------------</p>
-<h1>Componente 08 (FormsModule) </h1>
+<h1>Componente 08 (Form) </h1>
 
-<h1>{{nome}}</h1>
-<input type="text" [(ngModel)]="nome" placeholder="Digite seu nome">
+<form [formGroup]="formulario">
+  @if (formulario.get('nome').hasError('required') && formulario.get('nome').touched) {
+    <p class="alert alert-warning">O campo nome é obrigatório!</p>
+  }@else if (formulario.get('nome').hasError('minlength') && formulario.get('nome').touched) {
+    <p class="alert alert-warning">O nome tem que ter mais de 3 caracteres!</p>
+  }
+  <input type="text" formControlName="nome" placeholder="Nome" class="form-control">
+
+  @if (formulario.get('idade').hasError('required') && formulario.get('idade').touched) {
+    <p class="alert alert-warning">O campo idade é obrigatório!</p>
+  }@else if (formulario.get('idade').hasError('min') || formulario.get('idade').hasError('max') && formulario.get('idade').touched) {
+    <p class="alert alert-warning">A idade tem que ser maior que 0 e menor que 120!</p>
+  }
+  <input type="number" formControlName="idade" placeholder="Idade" class="form-control">
+
+  @if (formulario.get('cidade').hasError('required') && formulario.get('cidade').touched) {
+    <p class="alert alert-warning">O campo cidade é obrigatório!</p>
+  }@else if (formulario.get('cidade').hasError('minlength') && formulario.get('cidade').touched) {
+    <p class="alert alert-warning">A cidade tem que ter mais de 3 caracteres!</p>
+  }
+  <input type="text" formControlName="cidade" placeholder="Cidade" class="form-control">
+
+  @if (btnCadastrar) {
+      <input type="button" value="Cadastrar" (click)="cadastrar()" class="btn btn-primary" [disabled]="formulario.invalid">
+  }@else {
+    <input type="button" (click)="alterar()" value="Alterar" class="btn btn-primary">
+    <input type="button" (click)="remover()" value="Remover" class="btn btn-primary">
+    <input type="button" (click)="cancelamento()" value="Cancelar" class="btn btn-primary">
+  }
+</form>
+
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Nome</th>
+      <th>Idade</th>
+      <th>Cidade</th>
+      <th>Selecionar</th>
+    </tr>
+  </thead>
+
+  <tbody>
+      <tr *ngFor="let v of vetor; index as indice">
+        <td>{{indice + 1}}</td>
+        <td>{{v.nome}}</td>
+        <td>{{v.idade}}</td>
+        <td>{{v.cidade}}</td>
+        <td><button class="btn btn-primary" (click)="selecionar(indice)">Selecionar</button></td>
+      </tr>
+  </tbody>
+</table>
